--- a/doc/intltool-merge.8
+++ b/doc/intltool-merge.8
@@ -25,36 +25,36 @@ xml nodes, where each node contains one of the localized strings with
 .\" -------------------------------------------------------
 .IP "\fB\-b\fR" 4
 .PD 0
-.IP "\fB\--ba-style\fR" 4
+.IP "\fB\-\-ba-style\fR" 4
 .PD
 Merge files in bonobo-activation style, which is used for bonobo servers.
 .IP "\fB\-d\fR" 4
 .PD 0
-.IP "\fB\--desktop-style\fR" 4
+.IP "\fB\-\-desktop-style\fR" 4
 .PD
 Merge files in desktop style, which is similar to the Windows .ini file format.
 .IP "\fB\-k\fR" 4
 .PD 0
-.IP "\fB\--keys-style\fR" 4
+.IP "\fB\-\-keys-style\fR" 4
 .PD
 Merge files in keys style, which is used for metadata.
 .IP "\fB\-o\fR" 4
 .PD 0
-.IP "\fB\--oaf-style\fR" 4
+.IP "\fB\-\-oaf-style\fR" 4
 .PD
 (OBSOLETE) Same as
-.BR \-b / \--ba-style "."
+.BR \-b / \-\-ba-style "."
 .IP "\fB\-r\fR" 4
 .PD 0
-.IP "\fB\--rfc822deb-style\fR" 4
+.IP "\fB\-\-rfc822deb-style\fR" 4
 .PD
 Merge files in RFC 822 style, which is usually used in Debian configuration files.
-.IP "\fB\--quoted-style\fR" 4
+.IP "\fB\-\-quoted-style\fR" 4
 .PD
 Merge files in quoted string style, which just translates any strings within "".
 .IP "\fB\-x\fR" 4
 .PD 0
-.IP "\fB\--xml-style\fR" 4
+.IP "\fB\-\-xml-style\fR" 4
 .PD
 Merge files in standard XML style, both as attributes and as raw pcdata.
 
@@ -63,33 +63,33 @@ Merge files in standard XML style, both as attributes and as raw pcdata.
 .\" -------------------------------------------------------
 .IP "\fB\-u\fR" 4
 .PD 0
-.IP "\fB\--utf8\fR" 4
+.IP "\fB\-\-utf8\fR" 4
 .PD
 Convert all strings to UTF-8 before merging.
 .IP "\fB\-p\fR" 4
 .PD 0
-.IP "\fB\--pass-through\fR" 4
+.IP "\fB\-\-pass-through\fR" 4
 .PD
 Use strings as is in .po files without conversion (STRONGLY unrecommended
-with -x).
+with \-x).
 .IP "\fB\-c\fR" 4
 .PD 0
-.IP "\fB\--cache\fR" 4
+.IP "\fB\-\-cache\fR" 4
 .PD
 (TBD)
 .IP "\fB\-q\fR" 4
 .PD 0
-.IP "\fB\--quiet\fR" 4
+.IP "\fB\-\-quiet\fR" 4
 .PD
 Be quiet while running.
 .IP "\fB\-v\fR" 4
 .PD 0
-.IP "\fB\--version\fR" 4
+.IP "\fB\-\-version\fR" 4
 .PD
 Show version information.
 .IP "\fB\-h\fR" 4
 .PD 0
-.IP "\fB\--help\fR" 4
+.IP "\fB\-\-help\fR" 4
 .PD
 Show usage and basic help information.
 
