--- a/doc/intltoolize.8
+++ b/doc/intltoolize.8
@@ -17,23 +17,23 @@ level directory of the package before running
 
 
 .SH OPTIONS
-.IP "\fB\--automake\fR" 4
+.IP "\fB\-\-automake\fR" 4
 Work silently and assume that \fIautomake\fR is being used in software.
 .IP "\fB\-c\fR" 4
 .PD 0
-.IP "\fB\--copy\fR" 4
+.IP "\fB\-\-copy\fR" 4
 .PD
 Copy files rather than creating symbolic links to them.
-.IP "\fB\--debug\fR" 4
+.IP "\fB\-\-debug\fR" 4
 Enable verbose shell tracing.
 .IP "\fB\-n\fR" 4
 .PD 0
-.IP "\fB\--dry-run\fR" 4
+.IP "\fB\-\-dry-run\fR" 4
 .PD
 Print commands only, instead of executing them.
 .IP "\fB\-f\fR" 4
 .PD 0
-.IP "\fB\--force\fR" 4
+.IP "\fB\-\-force\fR" 4
 .PD
 Replace existing files if they exist.
 .IP "\fB\-\-help\fR" 4
